// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders snapshot of size large 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  background-color: #848C92;
  color: #05192D;
  height: 18px;
  font-size: 14px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test Label
  </span>
</span>
`;

exports[`Badge renders snapshot of size medium 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  background-color: #848C92;
  color: #05192D;
  height: 18px;
  font-size: 12px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test Label
  </span>
</span>
`;

exports[`Badge renders snapshot of size small 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  text-transform: uppercase;
  border-radius: 4px;
  padding-left: 4px;
  padding-right: 4px;
  letter-spacing: 0.5px;
  background-color: #848C92;
  color: #05192D;
  height: 16px;
  font-size: 10px;
}

.emotion-1 {
  max-width: 164px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<span
  class="emotion-0"
>
  <span
    class="emotion-1"
  >
    Test Label
  </span>
</span>
`;
